Swapped out Jackson for Avaje. No Graalvm reflection metadata is needed.