@@ -11,17 +11,21 @@ repositories {
 }
 
 dependencies {
-    implementation("com.fasterxml.jackson.core:jackson-core:2.17.2")
-    implementation("com.fasterxml.jackson.core:jackson-databind:2.17.2")
+    implementation("io.avaje:avaje-jsonb:3.5")
     implementation("org.xerial:sqlite-jdbc:3.46.1.0")
     implementation("info.picocli:picocli:4.7.6")
 
     annotationProcessor("info.picocli:picocli-codegen:4.7.6")
+    annotationProcessor("io.avaje:avaje-jsonb-generator:3.5")
 
     runtimeOnly("org.slf4j:slf4j-simple:2.0.11")
 
     testImplementation(platform("org.junit:junit-bom:5.10.0"))
     testImplementation("org.junit.jupiter:junit-jupiter")
+}
+
+tasks.compileJava {
+    options.compilerArgs.add("-proc:full")
 }
 
 tasks.test {
@@ -33,10 +37,6 @@ java {
 //        languageVersion = JavaLanguageVersion.of(21)
 //        vendor = JvmVendorSpec.GRAAL_VM
 //    }
-}
-
-tasks.compileJava {
-    options.compilerArgs.add("-Aproject=${project.group}/${project.name}")
 }
 
 application {
